Updating my details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,18 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Im currently working as a fire alarm techincian. 🔥  :Man Construction Worker: Medium Skin Tone 🛠 👷‍♂️ 🧯
+        Im a complete beginner and im here to learn how to code 💻 and use the skills I learn here to advance in my industry or move into a different industry. 🔬 🛰 🛸 🤖      </p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Im Ecuadorian-American 🇪🇨 🇺🇸  , born in Brooklyn NY. </p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Im my spare time, when im not busy playing with my kids, I enjoy going out and walking my dog, 🐕 ridng my motorcycle 🏍 and building things in the yard.  </p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>A job that is invovled in space exploration 🚀, or being a trust-fund baby  who's job description is figuring out how to spend all that money 💰 💸</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Queens, New York</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I have always found coding fascinating, I wasn't able to take the computer science in highschool. In college I had a terrible experience in a C++ course, which kept me away from coding. Now with Covid-19 I've decided to take up coding again.   </p>
     </section>
 
     <footer id="footer">
