revision of first update

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Im currently working as a fire alarm techincian. 🔥  :Man Construction Worker: Medium Skin Tone 🛠 👷‍♂️ 🧯
+      <p>Im currently working as a fire alarm techincian. 🔥 🛠 👷‍♂️ 🧯
         Im a complete beginner and im here to learn how to code 💻 and use the skills I learn here to advance in my industry or move into a different industry. 🔬 🛰 🛸 🤖      </p>
       <h1>Where I'm From</h1>
       <p>Im Ecuadorian-American 🇪🇨 🇺🇸  , born in Brooklyn NY. </p>
